updated home and about pages

--- a/about.html
+++ b/about.html
@@ -5,69 +5,103 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Broken Arrow Periodontics Dental Implants</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-    crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <link rel="stylesheet" href="index.css">
-  <style>
-    body {
-      font-family: 'Montserrat' !important
-    }
-  </style>
+  <script src="./assets/jquery-3.6.4.min.js"></script>
+  <script src="index.js" type="text/javascript" defer></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg sticky-top bg-light">
-    <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-      <span class="navbar-brand mb-0 h1 theme-blue doctor-name">Dr. Lahari Vattikunta, D.D.S., M.S., Ph.D. </span>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 auto-ml-0-mr">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active theme-blue" aria-current="page" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">New Patients</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Appointments</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
   <div class="container-fluid text-center about-page">
     <div class="row section-one">
-
-      <div class="col-12 ">
-        <img src="clinic.png" class="img-fluid clinic" />
-      </div>
-      <div class="col-12 about-desc">
+      <div class="col-sm-12 col-md-12 about-desc">
         <h2>About</h2>
-        <p>The office of Dr. Beddoe is proud to serve Broken Arrow, OK and surrounding areas. We are dedicated to providing
+        <p>The office of Dr. Vattikunta is proud to serve Broken Arrow, OK and surrounding areas. We are dedicated to
+          providing
           the highest level of dental medicine along with friendly, compassionate service.</p>
-
-        <p>If you have any questions about how we can care for your teeth & mouth, please don’t hesitate to call us at 
-          <a href="tel:(918) 451-2717">(918) 451-2717</a>. Thank you!</p>
+        <p>If you have any questions about how we can care for your teeth & mouth, please don’t hesitate to call us at
+          <a href="tel:(918) 451-2717">(918) 451-2717</a>. Thank you!
+        </p>
+      </div>
+      <!-- <div class="col-sm-12 col-md-7">
+        <img src="assets/office_front.jpg" class="img-fluid clinic" />
+      </div> -->
+    </div>
+    <!-- <div class="row section-two" style="margin: 15px 5px">
+      <h2 class="theme-blue">Our Team</h2> -->
+      <!-- <p>The brief descriptions below are designed to familiarize you with our staff's training, priofessional
+        credentials and work experience.
+        Our caring staff is committed to creating a less stressful environment for your comfort.</p> -->
+      <!-- <div class="team-member row" style="margin-top: 25px;">
+        <div class="col-sm-12 col-md-2">
+          <img src="assets/doctor.jpg" class="img-fluid" />
+        </div>
+        <div class="col-sm-12 col-md-8">
+          <h4>Lahari Vattikunta, D.D.S., M.S., Ph.D.</h4>
+          <p>Dr. Vattikunta is a hardworking person. Though she seems grumpy most of the time, she is very caring. She
+            is married and has two naughty boys, Arjun and Sid.
+            To get on her good side get her a plant.
+          </p>
+        </div>
+      </div> -->
+      <!-- <div class="team-member row" style="margin-top: 25px;">
+        <p> &nbsp; DENTAL HYGIENISTS</p>
+        <ul>
+          <li>Angie Cook</li>
+        </ul>
+      </div>
+      <div class="team-member row" style="margin-top: 25px;">
+        <p> &nbsp; SURGICAL ASSISTANTS</p>
+        <ul>
+          <li>Angie Cook</li>
+        </ul>
+      </div>
+    </div> -->
+    <div class="row section-two">
+      <div class="col-sm-12 col-md-6" style="padding-left: 40px;">
+        <h2 class="theme-blue">Our Team</h2>
+        <div class="team-member row" style="margin-top: 25px;">
+          <p> &nbsp; DENTAL HYGIENISTS</p>
+          <ul>
+            <li>Melissa Gallegos</li>
+            <li>Angela Barbee</li>
+          </ul>
+        </div>
+        <div class="team-member row" style="margin-top: 25px;">
+          <p> &nbsp; DENTAL ASSISTANTS</p>
+          <ul>
+            <li>Vanessa Esparza</li>
+            <li>Sophia Hicks</li>
+          </ul>
+        </div>
+        <div class="team-member row" style="margin-top: 25px;">
+          <p> &nbsp; FRONT OFFICE</p>
+          <ul>
+            <li>Ashlie Johnson</li>
+            <li>Karla Garcia</li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <img src="assets/office_front.jpg" class="img-fluid clinic" />
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
 </body>
+<script>
+  $("#download").click(function(e){
+    e.preventDefault();//this will prevent the link trying to navigate to another page
+    var href = $(this).attr("href");//get the href so we can navigate later
+    setTimeout(function() {  
+      window.location = href;
+    }, 500)
 
+    //when update has finished, navigate to the other page
+});
+</script>
 </html>
