--- a/index.html
+++ b/index.html
@@ -5,81 +5,81 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Broken Arrow Periodontics Dental Implants</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
-    crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="index.css">
-  <style>
-    body {
-      font-family: 'Montserrat' !important;
-      font-weight: 400 !important;
-    }
-  </style>
+  <link type="text/css" rel="stylesheet" href="https://www.demandforced3.com/d3cp/css/widget.css" />
+
+  <script src="./assets/jquery-3.6.4.min.js"></script>
+  <script src="index.js" type="text/javascript" defer></script>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg sticky-top bg-light">
-    <div class="container-fluid">
-      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
-      <p class="navbar-brand mb-0 h1 theme-blue doctor-name">Dr. Lahari Vattikunta, D.D.S., M.S., Ph.D. </p>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0 auto-ml-0-mr">
-          <li class="nav-item">
-            <a class="nav-link active theme-blue" aria-current="page" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">New Patients</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Appointments</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="container-fluid text-center">
+  <!-- <img src="crown.svg" alt="Crown" style="width: 68px;
+  height: 100px;
+  z-index: 100;
+  position: absolute;
+  left: 18px;
+  top: 58px;" class="filter-green" />
+  <img src="tooth-line-icon.svg" alt="Crown" style="    width: 45px;
+  height: 78px;
+  z-index: 100;
+  position: absolute;
+  left: 30px;
+  top: 127px;" class="filter-green" /> -->
+  <div class="container-fluid text-center home-page">
     <div class="row section-one">
       <div class="bg-wrap">
-        <div class="clinic-bg" data-image="clinic_bg.jpeg"></div>
+        <div class="clinic-bg" data-image="clinic_bg.jpeg">
+            <!-- <img src="assets/team.JPG"/> -->
+        </div>
       </div>
       <div class="col-sm-12 col-md-6">
-        <h2>Broken Arrow Periodontics Dental Implants</h2>
-        <p>At Dr. Beddoe’s office, we are committed to providing best-in-class periodontic treatment for our patients. Whether
-          you are suffering from periodontal disease or in need of a tooth extraction, dental implants, or crown lengthening,
+        <h2>Broken Arrow Periodontics & Dental Implants</h2>
+        <p>At Dr. Vattikunta's office, we are committed to providing best-in-class periodontic treatment for our
+          patients. Whether
+          you are suffering from periodontal disease or in need of a tooth extraction, dental implants, or crown
+          lengthening,
           we are here to help improve the oral health of our patients through specialized periodontal procedures.</p>
 
-        <p>We know how uncomfortable tooth pain and treatment can be, which is why we work hard to provide a comfortable, family-friendly
-          atmosphere for all our patients. Our staff consists of friendly, experienced professionals who have spent years
-          perfecting their craft. Our medical staff is made up of expert practitioners who are at the forefront of the latest
+        <p>We know how uncomfortable tooth pain and treatment can be, which is why we work hard to provide a
+          comfortable, family-friendly
+          atmosphere for all our patients. Our staff consists of friendly, experienced professionals who have spent
+          years
+          perfecting their craft. Our medical staff is made up of expert practitioners who are at the forefront of the
+          latest
           medical advancements and regularly attend advanced training courses all around the country.</p>
 
-        <p>With us, you are in the best of hands as we do everything we can to heal your pain, restore your health and improve
+        <p>With us, you are in the best of hands as we do everything we can to heal your pain, restore your health and
+          improve
           your smile</p>
       </div>
       <div class="col-sm-12 col-md-6">
-        <img src="doctor.jpg" class="img-fluid" />
+        <img src="assets/team.JPG" class="img-fluid" />
       </div>
     </div>
-    <div class="row section-two">
+
+    <!-- <div class="row">
+      <script type="text/javascript">
+        d3cp_bid = '134001952';// Account ID in Business Portal
+        </script>
+        <script src="http://local.demandforce.com/b/brokenarrowperiodonticsanddentalimplantspllc/reviews.widget" type="text/javascript"></script>
+    </div> -->
+    <div class="row" style="margin-bottom: -50px;">
+      <div class='sk-ww-google-reviews' data-embed-id='25359875'></div><script src='https://widgets.sociablekit.com/google-reviews/widget.js' async defer></script>
+    </div>
+    <div class="row section-two" style="animation-delay: 500ms; opacity: 0;">
       <div class="col-sm-12 col-md-8">
-        <iframe width="100%" height="400" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJyRawy1yJtocRh_F18mScycc&key=AIzaSyBI_0zjp4JADz1UB3cWW_qMaZcca-Qk-s0"></iframe>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3225.3919717998615!2d-95.8158386843717!3d36.05954238010788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b68b8a8f62a3bb%3A0x64499e101be2fbcf!2s765%20N%20Aspen%20Ave%2C%20Broken%20Arrow%2C%20OK%2074012!5e0!3m2!1sen!2sus!4v1679184437951!5m2!1sen!2sus"
+          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
       <div class="col-sm-12 col-md-4 address-card">
         <h2>Address</h2>
-        <p class="address">2619 S Elm Pl <br/> Broken Arrow, OK 74012 <br/> US</p>
+        <p class="address">765 N Aspen Ave<br /> Broken Arrow, OK 74012 <br /> US</p>
 
         <h2>Phone</h2>
         <a href="tel:(918) 451-2717" class="phone-number" data-type="phone">(918) 451-2717</a>
@@ -88,18 +88,11 @@
         <a href="mailto:lahariv@baperio.com" class="email" data-type="email">lahariv@baperio.com</a>
       </div>
     </div>
-    <div class="row footer">
-      <h4>Lahari Vattikunta, D.D.S., M.S., Ph.D.</h4>
-      <p>2619 S Elm Pl <br/> Broken Arrow, OK 74012 <br/> US.</p>
-      <div>
-          <a href="tel:(918) 451-2717" class="phone-number" data-type="phone">(918) 451-2717</a>
-          <a href="mailto:lahariv@baperio.com" class="email" data-type="email">lahariv@baperio.com</a>
-      </div>
-    </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 </body>
 
 </html>
