--- a/contact.html
+++ b/contact.html
@@ -49,6 +49,8 @@
                 </div>
             </div>
             <button type="submit" class="btn btn-primary theme-blue-bg">Send Message</button>
+            <a href="mailto:vineetha2438@gmail.com?subject=free chocolate">example</a>
+
         </div>
         <div class="row section-two">
             <h2>Business Hours</h2>
