--- a/services.html
+++ b/services.html
@@ -43,18 +43,18 @@
             <div class="col-sm-12 col-md-6">
                 <p>Non Surgical Treatments:</p>
                 <ul>
-                    <li><a href="#">Oral Hygiene</a></li>
+                    <li><a href="oral_hygiene.html">Oral Hygiene</a></li>
                     <li>Debridement</li>
-                    <li><a href="#">Periodontal Disease</a></li>
-                    <li><a href="#">Non-Surgical Periodontal Treatment</a></li>
+                    <li><a href="perio_disease.html">Periodontal Disease</a></li>
+                    <li><a href="perio_treatment.html">Non-Surgical Periodontal Treatment</a></li>
                 </ul>
             </div>
             <div class="col-sm-12 col-md-6">
                 <p>Surgical Treatments:</p>
                 <ul>
-                    <li><a href="#">Bone Grafting</a></li>
-                    <li><a href="#">Tissue Grafting</a></li>
-                    <li><a href="#">Implant Dentistry</a></li>
+                    <li><a href="bone_grafting.html">Bone Grafting</a></li>
+                    <li><a href="tissue_grafting.html">Tissue Grafting</a></li>
+                    <li><a href="implant_dentistry.html">Implant Dentistry</a></li>
                     <li>Cosmetic Gum Surgery</li>
                     <li>Osseous Surgery</li>
                     <li>Biopsy/Oral Pathology</li>
