--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <meta http-equiv="Content-Security-Policy" 
+    content="script-src 'self' https://www.google.com https://widgets.sociablekit.com https://cdn.jsdelivr.net/ https://maps.googleapis.com/ nonce;
+            frame-src https://www.google.com">  -->
   <title>Broken Arrow Periodontics Dental Implants</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="index.css">
-  <link type="text/css" rel="stylesheet" href="https://www.demandforced3.com/d3cp/css/widget.css" />
+  <!-- <link type="text/css" rel="stylesheet" href="https://www.demandforced3.com/d3cp/css/widget.css" /> -->
+
 
   <script src="./assets/jquery-3.6.4.min.js"></script>
   <script src="index.js" type="text/javascript" defer></script>
@@ -72,10 +76,13 @@
     </div>
     <div class="row section-two" style="animation-delay: 500ms; opacity: 0;">
       <div class="col-sm-12 col-md-8">
-        <iframe
+        <gmp-map center="36.05956268310547,-95.81370544433594" zoom="16" map-id="DEMO_MAP_ID">
+            <gmp-advanced-marker position="36.05956268310547,-95.81370544433594" title="My location"></gmp-advanced-marker>
+          </gmp-map>
+        <!-- <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3225.3919717998615!2d-95.8158386843717!3d36.05954238010788!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b68b8a8f62a3bb%3A0x64499e101be2fbcf!2s765%20N%20Aspen%20Ave%2C%20Broken%20Arrow%2C%20OK%2074012!5e0!3m2!1sen!2sus!4v1679184437951!5m2!1sen!2sus"
           width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+          referrerpolicy="no-referrer-when-downgrade"></iframe> -->
       </div>
       <div class="col-sm-12 col-md-4 address-card">
         <h2>Address</h2>
@@ -89,6 +96,7 @@
       </div>
     </div>
   </div>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
     crossorigin="anonymous"></script>
